--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,8 @@ jobs:
       
       - name: "Login to Docker hub"
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_TOKEN}}
+
+      - name: "Bulding docker image"  
+        run: docker run -t ${{secrets.DOCKER_USERNAME}}/farida .
+      - name: "Pushing to Docker hub"
+        run: docker push  ${{secrets.DOCKER_USERNAME}}/farida 
