--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,7 @@
 on:
   push:
     branches:
-      -master
-
-
-
-
+      - master
 
 jobs:
   build:
@@ -13,11 +9,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
-      - name: "Login to Docker hub"
-        run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_TOKEN}}
 
-      - name: "Bulding docker image"  
-        run: docker run -t ${{secrets.DOCKER_USERNAME}}/farida .
+      - name: "Login to Docker hub"
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
+      - name: "Building docker image"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/farida .
+
       - name: "Pushing to Docker hub"
-        run: docker push  ${{secrets.DOCKER_USERNAME}}/farida 
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/farida
